# ubuntu-settings

./: README.md  meson.build
data/raspberrypi/: 10-raspi-eth0.link  meson.build  raspi-lz4.conf
data/ubuntu-wayland/applications/: info.desktop  texdoctk.desktop
data/ubuntu/applications/: gnome-initial-setup.desktop.in  info.desktop
debian/: changelog  control  copyright  maintscript  rules  ubuntu-raspi-settings.gsettings-override  ubuntu-raspi-settings.install  ubuntu-raspi-settings.maintscript  ubuntu-settings.gsettings-override  ubuntu-settings.install  ubuntu-settings.lintian-overrides  ubuntu-settings.postinst  ubuntu-touch-settings.gsettings-override
po/: POTFILES.in  meson.build
